--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div>
             <h4>My Academic Work</h4>
             <p class="timestamp">Updated: July 5, 2024</p>
-            <p>here is an example of pdf embedding <a href="Perelman - 2003 - Ricci flow with surgery on three-manifolds.pdf" download>here</a>.</p>
+            <p>here is an example of pdf embedding <a href="Perelman - 2003 - Ricci flow with surgery on three-manifolds.pdf" download>download here</a>.</p>
         </div>
     </div>
     <footer>
